--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <script src="vendors/angular.min.js" charset="utf-8"></script>
     <script src="scripts/script.js" charset="utf-8"></script>
   </head>
-  <body ng-app="myapp">
+  <body ng-app="myApp">
     <img src='images/meanie_3.jpg' width=800 height=400 />
     <h1>MEANie</h1>
     <p>A simple, ugly MEAN stack example. Console has output from GET call.</p>
